--- a/pages/Torneo.html
+++ b/pages/Torneo.html
@@ -4,38 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ProyectoPythonGrupo10 - Torneo</title>
-    <link rel="stylesheet" type="text/css" href="./Styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script defer src="./js/javascript.js"></script>
 </head>
 <body>
-    <!-- NAVBAR -->
+    <!-- HEADER -->
     <header>
-        <nav class="navbar bg-dark border-bottom fixed-top navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-            <div class="container-fluid">
-                <span class="navbar-brand mb-0 h1"><a href="./Index.html"><img src="./recursos/logo.png" alt="Logo" width="130" height="75"></a></span>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="./Torneo.html">El Torneo</a>
-                        <a class="nav-link" href="./LugarFecha.html">El lugar y la fecha</a>
-                        <a class="nav-link" href="./Reglamento.html">Reglamento</a>
-                        <a class="nav-link" href="./Fixture.html">Fixture</a>
-                    </div>
-                </div>
-            </div>
+        <a href="../index.html" class="logo"> 
+        <img src="/images/logo.png" alt="Logo Free Fire">
+        </a>
+        <nav>
+        <a class="nav-link active" aria-current="page" href="/pages/Torneo.html" >Torneo</a>
+        <a class="nav-link" href="/pages/LugarFecha.html" class="nav-link">Fecha y Lugar</a>
+        <a class="nav-link" href="/pages/Reglamento.html" class="nav-link">Reglamento</a>
+        <a class="nav-link" href="/pages/Fixture.html" class="nav-link">Fixture</a>
         </nav>
     </header>
-
-    <!-- /NAVBAR -->
-
+    <!-- /HEADER -->
+    
     <!-- BANNER -->
     <section>
         <div id="carouselExampleCaptions" class="carousel slide custom-banner" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./recursos/trofeo.png" class="d-block w-100 oscurecer" alt="Trofeo">
+                    <img src="./images/trofeo.png" class="d-block w-100 oscurecer" alt="Trofeo">
                     <div class="carousel-caption d-none d-md-block">
                         <div class="mt-4 text-end">
                             <h1>Copa FreeFire 2024</h1>
@@ -49,20 +42,20 @@
                 </div>
                 <!-- Additional carousel items -->
                 <div class="carousel-item">
-                    <img src="./recursos/bermuda-map.jpg" class="d-block w-100 oscurecer" alt="Map">
+                    <img src="./images/bermuda-map.jpg" class="d-block w-100 oscurecer" alt="Map">
                     <div class="carousel-caption d-none d-md-block">
                         <div class="mt-4 text-end">
                             <h5>Subtítulo Imagen 2</h5>
                             <p>Descripción de la Imagen 2.</p>
                             <div class="row">
                                 <div class="col"><a class="orador btn btn-outline-light text-white" href="#participar">Quiero participar</a></div>
-                                <div class="col"><a class="btn btn-success btn-primary" href="./Fixture.html">Fixture</a></div>
+                                <div class="col"><a class="btn btn-success btn-primary" href="./pages/Fixture.html">Fixture</a></div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./recursos/futuro.jpg" class="d-block w-100 oscurecer" alt="Imagen 3">
+                    <img src="./images/futuro.jpg" class="d-block w-100 oscurecer" alt="Imagen 3">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Subtítulo Imagen 3</h5>
                         <p>Descripción de la Imagen 3.</p>
@@ -123,6 +116,6 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybBogGzHfQ5SA6L4FvMXgiPR+ujRHP+0Ck2wI0XK2aDZRd4ju" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-cuNTG+uaT2EqPsMeUXE7t5u4J5Be6z9P9YcuEnA/91ZoPaToV3BIpC//G4pOGti" crossorigin="anonymous"></script>
-    <script src="./javascript.js"></script>
+    <script src="./js/javascript.js"></script>
 </body>
 </html>
