--- a/pages/Torneo.html
+++ b/pages/Torneo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ProyectoPythonGrupo10 - Torneo</title>
+    <title>ProyectoPythonGrupo10</title>
     <link rel="stylesheet" type="text/css" href="../css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script defer src="./js/javascript.js"></script>
@@ -28,7 +28,7 @@
         <div id="carouselExampleCaptions" class="carousel slide custom-banner" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/trofeo.png" class="d-block w-100 oscurecer" alt="Trofeo">
+                    <img src="/images/trofeo.png" class="d-block w-100 oscurecer" alt="Trofeo">
                     <div class="carousel-caption d-none d-md-block">
                         <div class="mt-4 text-end">
                             <h1>Copa FreeFire 2024</h1>
@@ -95,22 +95,33 @@
     <!-- /TORNEO -->
 
     <!-- FOOTER -->
-    <footer class="bg-dark text-light p-4">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-12">
-                    <ul class="list-inline text-center flex-column flex-md-row">
-                        <li class="list-inline-item"><a href="#">Preguntas Frecuentes</a></li>
-                        <li class="list-inline-item"><a href="#">Contáctanos</a></li>
-                        <li class="list-inline-item"><a href="#">Sponsors</a></li>
-                        <li class="list-inline-item"><a href="#">Términos y Condiciones</a></li>
-                        <li class="list-inline-item"><a href="#">Privacidad</a></li>
-                        <li class="list-inline-item"><a href="#">Streamers</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+    <footer class="footer">
+        <ul class="social-icon">
+            <li class="social-icon_item">
+                <a class="social-icon_link" target="_blank" href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+            </li>
+            <li class="social-icon_item">
+                <a class="social-icon_link" target="_blank" href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+            </li>
+            <li class="social-icon_item">
+                <a class="social-icon_link" target="_blank" href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+            </li>
+        </ul>
+        <ul class="menu">
+            <li class="menu_item"><a class="menu_link" href="/Index.html">Torneo</a></li>
+            <li class="menu_item"><a class="menu_link" href="/pages/LugarFecha.html">Fecha y Lugar</a></li>
+            <li class="menu_item"><a class="menu_link" href="/pages/Reglamento.html">Reglamento</a></li>
+            <li class="menu_item"><a class="menu_link" href="/pages/Fixture.html">Fixture</a></li>
+        </ul>
+        <picture class="header_logo_image">
+            <a href="./index.html">
+                <img src="../images/logo.png">
+            </a>
+        </picture>
+        <i class="fa-solid fa-phone"></i>
+        <p>&copy;Free Fire | All Rights Reserved</p>
     </footer>
+    
     <!-- /FOOTER -->
 
     <!-- JavaScript Bundle with Popper -->
