--- a/pages/Torneo.html
+++ b/pages/Torneo.html
@@ -39,22 +39,21 @@
                         </div>
                     </div>
                 </div>
-            <!-- Additional carousel items -->
+    <!-- Additional carousel items -->
             <div class="carousel-item">
-                <img src="./images/bermuda-map.jpg" class="d-block w-100 oscurecer" alt="Map">
-                    <div class="carousel-caption d-none d-md-block">
+            <img src="./images/bermuda-map.jpg" class="d-block w-100 oscurecer" alt="Map">
+                <div class="carousel-caption d-none d-md-block">
                         <div class="mt-4 text-end">
-                            <h5>Subtítulo Imagen 2</h5>
-                            <p>Descripción de la Imagen 2.</p>
+                            <h5>Copa FreeFire 2024</h5>
+                            <p>Llega el mejor evento para que puedas demostrar tus habilidades junto a tu escuadra y ganar increíbles premios. ¡Te esperamos!</p>
                             <div class="row">
-                                <div class="col"><a class="orador btn btn-outline-light text-white" href="#participar">Quiero participar</a></div>
                                 <div class="col"><a class="btn btn-success btn-primary" href="./pages/Fixture.html">Fixture</a></div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/futuro.jpg" class="d-block w-100 oscurecer" alt="Imagen 3">
+                    <img src="./images/futuro.jpg" class="d-block w-100 oscurecer" alt="futuro">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Subtítulo Imagen 3</h5>
                         <p>Descripción de la Imagen 3.</p>
